# MyLog

./: README.md
MyLog/: CMakeLists.txt
MyLog/src/include/: MyLog.h
MyLog/src/main/: main.cpp
MyLog/src/sources/: MyLog.cpp
